# scrap-int

./: .gitignore  README.md  fareframe.settings.toml.example  flights_price_scan.py  pyproject.toml
src/fareframe/: __init__.py  cli.py  models.py  notifications.py  settings.py
src/fareframe/core/: base.py  registry.py
src/fareframe/scrapers/: __init__.py  aircanada.py  example_site.py  westjet.py
tests/: test_registry.py
