[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fareframe"
version = "0.1.0"
description = "Flight price monitoring with one scraper per website."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.58.0",
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
fareframe = "fareframe.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
